@@ -5,10 +5,12 @@ IN DEVELOPMENT ======= 1.2.7
 - added: framework.injectDefinition()
 - added: framework.response501() and controller.view501() - 501 Not Implemented
 - added: parse resource/configuration from a string - string.configuration()
+- added: async.cancel()
 
 - updated: default port: port || process.env.PORT || 8000
 - updated: default framework.onMeta()
 - updated: framework.init() - default IP is 127.0.0.1
+- updated: controller.cancel() (added async.cancel)
 
 - fixed: FrameworkFileSystem class
 - fixed: view render
